# goal

./: CMakeLists.txt  README.md
aux/: do-config-trilinos.sh  do-config.sh
cmake/: find_trilinos.cmake  set_compiler_flags.cmake  set_options.cmake
doc/: do-config-trilinos.sh
examples/: CMakeLists.txt  elast_continuation_2D.xml  elast_continuation_2D_serial.xml  elast_continuation_3D.xml  elast_continuation_3D_serial.xml  elast_continuation_mixed_2D.xml  elast_continuation_mixed_plate.xml  j2_continuation_2D.xml  j2_continuation_2D_P2.xml  j2_continuation_2D_serial.xml  j2_continuation_3D.xml  j2_continuation_3D_serial.xml  j2_continuation_mixed_2D.xml  j2_continuation_mixed_plate.xml  square.cpp
examples/meshes/: .CMakeLists.txt.swp  CMakeLists.txt  cube.txt  kirsch.cpp  kirsch.txt  plate.cpp  plate.txt  solder_ball.txt  square.txt
src/: CMakeLists.txt  adapter.cpp  adapter.hpp  assert_param.cpp  assert_param.hpp  config_in.hpp  control.cpp  control.hpp  data_types.hpp  dimension.cpp  dimension.hpp  dual_problem.cpp  dual_problem.hpp  error_estimation.cpp  error_estimation.hpp  ev_basis_functions.cpp  ev_basis_functions.hpp  ev_bc_dirichlet.cpp  ev_bc_dirichlet.hpp  ev_bc_traction.cpp  ev_bc_traction.hpp  ev_dof_interpolation.cpp  ev_dof_interpolation.hpp  ev_elem_size.cpp  ev_elem_size.hpp  ev_first_pk.cpp  ev_first_pk.hpp  ev_gather_dual.cpp  ev_gather_dual.hpp  ev_gather_solution.cpp  ev_gather_solution.hpp  ev_kinematics.cpp  ev_kinematics.hpp  ev_mechanics_error.cpp  ev_mechanics_error.hpp  ev_mechanics_residual.cpp  ev_mechanics_residual.hpp  ev_model_creep.cpp  ev_model_creep.hpp  ev_model_elastic.cpp  (+56 more)
tests/: CMakeLists.txt  elast_continuation_2D_serial.xml  elast_continuation_3D.xml  elast_continuation_3D_serial.xml  elast_continuation_body_force_2D.xml  elast_continuation_mixed_2D.xml  elast_continuation_mixed_2D_serial.xml  elast_continuation_mixed_3D.xml  elast_continuation_mixed_3D_serial.xml  elast_continuation_temperature_3D.xml  elast_continuation_temperature_3D_serial.xml  elast_continuation_traction_2D.xml  elast_continuation_traction_2D_serial.xml  elast_continuation_traction_3D.xml  elast_continuation_traction_3D_serial.xml  elast_trapezoid_2D.xml  j2_continuation_2D_serial.xml  j2_continuation_3D.xml  j2_continuation_3D_serial.xml  j2_continuation_mixed_2D.xml  j2_continuation_mixed_2D_serial.xml  j2_continuation_mixed_3D.xml  j2_continuation_mixed_3D_serial.xml  j2_continuation_mixed_traction_3D.xml  j2_continuation_mixed_traction_3D_serial.xml  j2_continuation_spr_2D.xml  j2_continuation_temperature_3D.xml  j2_continuation_temperature_3D_serial.xml  j2_continuation_uniform_2D.xml
tests/meshes/: cube-serial0.smb  cube.cpp  cube.txt  cube0.smb  cube1.smb  cube2.smb  cube3.smb  rectangle-serial0.smb  rectangle.cpp  rectangle.dmg  rectangle.txt  rectangle0.smb  rectangle1.smb  rectangle2.smb  rectangle3.smb  solder_ball.cpp  square-serial0.smb  square.txt  square0.smb  square1.smb  square2.smb  square3.smb
